--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
       </div>
     </div>
-  </footer>  cd "c:\Users\Rbele\Documents\Curso Frontend Usach"  cd "c:\Users\Rbele\Documents\Curso Frontend Usach"  cd "c:\Users\Rbele\Documents\Curso Frontend Usach"  cd "c:\Users\Rbele\Documents\Curso Frontend Usach"  cd "c:\Users\Rbele\Documents\Curso Frontend Usach"  cd "c:\Users\Rbele\Documents\Curso Frontend Usach"
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
